tests/compiler/typecheck/import_4.kk
// error: cannot import private symbol
module (spam) = import "./import_1.kk"
